#    This file is part of keywi.
#
#    keywi is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    keywi is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with keywi.  If not, see <https://www.gnu.org/licenses/>.
cargo-features = ["strip"]
[package]
name = "keywi"
version = "0.1.0"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A vault of secrets, written in Rust."
repository = "https://github.com/Dirout/keywi"
homepage = "https://github.com/Dirout/keywi"
readme = "README.md"
resolver = "2"
include = [
    "**/*.rs",
    "Cargo.toml",
    "COPYING",
    "LICENSE.md",
    "NOTICE",
    "rust-toolchain",
    "rustfmt.toml",
    ".cargo/*",
]

[lib]
name = "keywi"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "keywi"
path = "src/main.rs"
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
bincode = "1.3.3"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
chrono = { version = "0.4.23", features = ["unstable-locales", "serde"] }
clap = { version = "4.0.29", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
dialoguer = { version = "0.10.2", features = ["editor", "password", "fuzzy-select"] }
edit = "0.1.4"
filenamify = "0.1.0"
git2 = "0.15.0"
lazy_static = "1.4.0"
miette = { version = "5.5.0", features = ["fancy"] }
mimalloc = { version = "0.1.32", default-features = false }
notify = "5.0.0"
passwords = { version = "3.1.12", features = ["crypto", "common-password"] }
path-clean = "0.1.0"
rand_core = { version = "0.6.4", features = ["std", "serde1"] }
rpassword = "7.2.0"
serde = "1.0.149"
stopwatch = "0.0.7"
tantivy = { version = "0.18.1", features = ["mmap", "lz4-compression"] }
uuid = { version = "1.2.2", features = ["serde", "fast-rng", "v7", "macro-diagnostics"] }
wild = "2.1.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = 0
panic = 'abort'

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/keywi", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/keywi/README", "644"],
    ["COPYING", "usr/share/doc/keywi/COPYING", "644"],
    ["data/hicolor/**/*", "/usr/share/icons/hicolor/", "644"],
]

[package.metadata.rpm]
package = "keywi"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
keywi = { path = "/usr/bin/keywi" }
