#    This file is part of Vaultist.
#
#    Vaultist is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Vaultist is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with Vaultist.  If not, see <https://www.gnu.org/licenses/>.
[package]
name = "vaultist"
version = "0.1.0"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A vault of secrets, written in Rust."
repository = "https://github.com/Dirout/vaultist"
homepage = "https://github.com/Dirout/vaultist"
readme = "README"
resolver = "2"
include = [
    "**/*.rs",
    "Cargo.toml",
    "COPYING",
    "LICENSE.md",
    "NOTICE",
    "rust-toolchain",
    "rustfmt.toml",
    ".cargo/*",
]

[lib]
name = "vaultist"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "vaultist"
path = "src/main.rs"
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
argon2 = "0.4.1"
bincode = "1.3.3"
blake2 = "0.10.6"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
chrono = { version = "0.4.23", features = ["unstable-locales", "serde"] }
clap = { version = "4.0.32", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
convert_case = "0.6.0"
derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
dialoguer = { version = "0.10.2", features = ["editor", "password", "fuzzy-select"] }
edit = "0.1.4"
filenamify = "0.1.0"
generic-array = { version = "0.14.6", features = ["serde"] }
git2 = "0.15.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
memorable-wordlist = "0.1.7"
miette = { version = "5.5.0", features = ["fancy"] }
mimalloc = { version = "0.1.32", default-features = false }
notify = "5.0.0"
password-hash = "0.4.2"
passwords = { version = "3.1.12", features = ["crypto", "common-password"] }
path-clean = "0.1.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std", "serde1"] }
rpassword = "7.2.0"
serde = "1.0.151"
stopwatch = "0.0.7"
tantivy = { version = "0.19.0", features = ["mmap", "lz4-compression"] }
uuid = { version = "1.2.2", features = ["serde", "fast-rng", "v7", "macro-diagnostics"] }
vector-map = "1.0.1"
wild = "2.1.0"
zeroize = { version = "1.5.7", features = ["alloc", "derive"] }
zxcvbn = { version = "2.2.1", features = ["builder", "ser"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = 0
panic = 'abort'

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/vaultist", "usr/bin/", "755"],
    ["README", "usr/share/doc/vaultist/README", "644"],
    ["COPYING", "usr/share/doc/vaultist/COPYING", "644"],
    ["data/hicolor/**/*", "/usr/share/icons/hicolor/", "644"],
]

[package.metadata.rpm]
package = "vaultist"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
vaultist = { path = "/usr/bin/vaultist" }
